--- a/Assignment 3/Report/Report.tex
+++ b/Assignment 3/Report/Report.tex
@@ -40,7 +40,7 @@
 	
 	\HRule\\[0.4cm]
 	
-	{\huge\bfseries Assignment 2 Report}\\[0.4cm] % Title of your document
+	{\huge\bfseries Assignment 3 Report}\\[0.4cm] % Title of your document
 	
 	\HRule\\[1.5cm]
 	
@@ -72,94 +72,140 @@
 	
 	\vfill\vfill\vfill % Position the date 3/4 down the remaining page
 	
-	{\large February 12, 2018} 
+	{\large February 26, 2018} 
 		%----------------------------------------------------------------------------------------
 	
 	\vfill % Push the date up 1/4 of the remaining page
 \end{titlepage}
 
 \pagebreak
+\section{Note about collaboration}
+I discussed with Florence Regol RE which hyperparameters to tune, why, and what values we felt were important. No code or data was transferred.
 
-\section*{Linear Classification and Nearest Neighbour Classification}
-\subsection*{1. Dataset 1}
-The first dataset, DS1, was created as indicated in the handout. Please note that I decided to split up the data into different text files. I first split it into testing and training (as was given in assignment 1), and then I further split it up into positive and negative classes. Another, more scalable, option would be to add a column to the data called "label", but with two classes I found this method easier.
+\section{Note about F1 Measure}
+The F1 measure was calculated using the method in the sklearn library. There are many different options for calculating F1 using this method, namely binary, micro, macro, weighted, and samples. For the binary bag of words, the average "binary" was used. For frequency bag of words, "micro" was used. The reason for using micro was because it seemed the closest to the binary version, as it acts by counting true positives, false negatives, and false positives.
 
-\subsection*{2. LDA with Dataset 1}
-Below are the computed performance measures for dataset 1 with LDA classification.\\
+\section{Raw F1 Measure Data}
+Tables 1 and 2 show the raw F1 data for the classifiers, split by the two datasets.
+\begin{table}[ht]
+\centering
+\caption{Yelp Classifier F1 Measures}
+\label{my-label}
 \begin{tabular}{llllll}
-Best fit accuracy & 95.08 \% &  &  &  &  \\
-Precision         & 95.77 \% &  &  &  &  \\
-Recall            & 94.33 \% &  &  &  &  \\
-F-measure         & 95.05 \% &  &  &  &  \\
-                  &          &  &  &  &  \\
+                                                 & Training F1 \%             & Validation F1 \%           & Testing F1 \% &  &  \\ \cline{1-4}
+\multicolumn{1}{l|}{Random Classifier}           & \multicolumn{1}{l|}{20.03} & \multicolumn{1}{l|}{N/A}   & 20.55         &  &  \\
+\multicolumn{1}{l|}{Majority Classifier}         & \multicolumn{1}{l|}{35.26} & \multicolumn{1}{l|}{N/A}   & 35.10         &  &  \\
+\multicolumn{1}{l|}{BBoW: Bernoulli NB} & \multicolumn{1}{l|}{74.70} & \multicolumn{1}{l|}{42.50} & 44.25         &  &  \\
+\multicolumn{1}{l|}{BBoW: Decision Tree}         & \multicolumn{1}{l|}{52.87} & \multicolumn{1}{l|}{39.10} & 39.40         &  &  \\
+\multicolumn{1}{l|}{BBoW: Linear SVM}            & \multicolumn{1}{l|}{69.59} & \multicolumn{1}{l|}{48.50} & 43.55         &  &  \\
+\multicolumn{1}{l|}{FBoW: Gaussian NB}  & \multicolumn{1}{l|}{80.25} & \multicolumn{1}{l|}{36.80} & 31.00         &  &  \\
+\multicolumn{1}{l|}{FBoW: Decision Tree}         & \multicolumn{1}{l|}{39.64} & \multicolumn{1}{l|}{38.50} & 38.50         &  &  \\
+\multicolumn{1}{l|}{FBoW: Linear SVM}            & \multicolumn{1}{l|}{60.84} & \multicolumn{1}{l|}{46.10} & \textbf{49.55}         &  & 
 \end{tabular}
-\\
-\noindent
-The coefficients learnt were the following:\\
-$w$ = [-14.70625916, 8.72333061, 6.06823166, 3.39412552, 10.23338177, 4.19114737, -17.87277904, 24.77351351, 30.34024193, -9.18815402, 13.27738285, 12.89340784, -16.32857775, -13.64881951, 5.89264418, -13.54701867, -30.67490656, 6.98491646, 0.99426985, 5.20896759]\\
-$w_0$ = -28.0514877938
-\subsection*{3. k-NN with Dataset 1}
-Figure 1 shows how the $F_1$ measure changed as k was increased from 1 to 150. I only chose odd numbers of k to prevent having to deal with ties. As it would be messy to list the performance for every 75 k value, I instead list the performances every 10, as well as the best. The performances for each value of k are given below in Table 1. 
+\end{table}
 
-\begin{figure}[h]
+\begin{table}[ht]
 \centering
-\includegraphics[width=0.5\textwidth]{ds1_f_k}
-\caption{F-measure vs k value for NN, dataset 1}
-\end{figure}
-
-\begin{figure}[h]
-\centering
-\caption*{Table 1: F-measure values}
-\includegraphics[width=0.2\textwidth]{ds1_f_k_values}
-\end{figure}
-
-This classifier does much worse than LDA. The linear approach yields around a 95\% $F_1$ measure, whereas this reaches about 58\% at the maximum, at a k value of 129. Generally, the k-NN classifier improves as k increases, up to about 100, where it then fluctuates. Depending on the (randomly) generated data, the optimal value of k could change greatly. It would be a good idea to use a separate set of data to properly select a value of k.\\
-
-\noindent
-Below are the computed performance measures for dataset 1 with k-NN (k = 129) classification.\\
+\caption{IMDB Classifier F1 Measures}
+\label{my-label}
 \begin{tabular}{llllll}
-Best fit accuracy & 56.42 \% &  &  &  &  \\
-Precision         & 55.97 \% &  &  &  &  \\
-Recall            & 60.17 \% &  &  &  &  \\
-F-measure         & 57.99 \% &  &  &  &  \\
-                  &          &  &  &  &  \\
+                                         & Training F1 \%             & Validation F1 \%           & Testing F1 \% &  &  \\ \cline{1-4}
+\multicolumn{1}{l|}{Random Classifier}   & \multicolumn{1}{l|}{50.49} & \multicolumn{1}{l|}{N/A}   & 49.59         &  &  \\
+\multicolumn{1}{l|}{BBoW: Bernoulli NB}  & \multicolumn{1}{l|}{87.01} & \multicolumn{1}{l|}{84.26} & 82.98         &  &  \\
+\multicolumn{1}{l|}{BBoW: Decision Tree} & \multicolumn{1}{l|}{87.55} & \multicolumn{1}{l|}{71.85} & 72.40         &  &  \\
+\multicolumn{1}{l|}{BBoW: Linear SVM}    & \multicolumn{1}{l|}{98.96} & \multicolumn{1}{l|}{86.28} & \textbf{84.86}         &  &  \\
+\multicolumn{1}{l|}{FBoW: Gaussian NB}   & \multicolumn{1}{l|}{86.11} & \multicolumn{1}{l|}{76.63} & 68.76         &  &  \\
+\multicolumn{1}{l|}{FBoW: Decision Tree} & \multicolumn{1}{l|}{75.56} & \multicolumn{1}{l|}{68.79} & 71.08         &  &  \\
+\multicolumn{1}{l|}{FBoW: Linear SVM}    & \multicolumn{1}{l|}{98.46} & \multicolumn{1}{l|}{83.91} & 83.48         &  & 
 \end{tabular}
-\\
+\end{table}
+\section{Yelp Dataset}
+Note that discussion about the performance of the classifiers will occur after all the data are reported.
+\subsection{Common Classifiers}
+The following two classifiers are independent of whether binary bag of words or frequency bag of words was used, since they do not take these data into consideration.
 
-\subsection*{4. Dataset 2}
-Again, as for dataset 1, I decided to save multiple text files, split into the testing and training sets, as well as the positive and negatively classified sets. I did this instead of using a label column.
+\subsubsection{Random Classifier}
+The random classifier for the Yelp dataset had a Training F1 measure of 20.03\% and a Testing F1 measure of 20.55\%. Note that the validation performance was not measured for this classifier, since there is nothing to tune.
 
-\subsection*{5. LDA \& k-NN with Dataset 2}
-Below are the computed performance measures for dataset 2 with LDA classification.\\
-\begin{tabular}{llllll}
-Best fit accuracy & 55.83 \% &  &  &  &  \\
-Precision         & 55.52 \% &  &  &  &  \\
-Recall            & 58.67 \% &  &  &  &  \\
-F-measure         & 57.05 \% &  &  &  &  \\
-                  &          &  &  &  &  \\
-\end{tabular}\\
+\subsubsection{Majority Classifier}
+The majority Classifier for the Yelp dataset had a Training F1 measure of 35.26\% and a Testing F1 measure of 35.10\%.
 
-Next, k-NN was performed with k varying again. The values for k this time can be seen in Figure 2, below. It is worth noting that there is no clear trend at all with how k changes and the $F_1$ measure for k-NN with dataset 2.
+\subsection{Binary Bag of Words}
+The converted dataset for binary bag of words is included in the submitted files.
+
+\subsubsection{Bernoulli Naive Bayes Classifier}
+The hyperparameter that was cross-validated for Bernoulli Naive Bayes was alpha, which is the additive smoothing parameter. The closer to 0 alpha is, the less smoothing. The range of alpha examined was 1E-5 to 10. Figure 1 shows the F1 measure on the validation set versus alpha. One can see that there is a clear increase and decrease at the beginning of the range. The highest validation F1 measure of 42.50\% occurred when alpha = 0.01. This led to a training F1 measure of 74.70\% and a testing F1 measure of 44.25\%.
+
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.5\textwidth]{ds2_f_k}
-\caption{F-measure vs k value for NN, dataset 2}
+\includegraphics[width=0.8\textwidth]{Yelp_BernoulliNB}
+\caption{F1 measure versus alpha for Bernoulli NB (Yelp)}
 \end{figure}
 
-The k corresponding to the highest f value was k = 137, which yielded an F-measure of 52.61\%. Using this value, the following performance measures were found for dataset 2 with k-NN classification.
+\subsubsection{Decision Tree Classifier}
+For the decision tree classifier, the only hyperparameter that was cross-validated was the maximum depth of the tree. This was discussed in lecture as a good parameter to validate. The range for this parameter was between 1 and infinity (covering 12 values). The highest validation F1 measure of 39.10\% occurred when the maximum depth was 10. This corresponded to a training F1 measure of 52.87\% and a testing F1 measure of 39.40\%.
 
-\begin{tabular}{llllll}
-Best fit accuracy & 56.17 \% &  &  &  &  \\
-Precision         & 57.25 \% &  &  &  &  \\
-Recall            & 48.67 \% &  &  &  &  \\
-F-measure         & 52.61 \% &  &  &  &  \\
-                  &          &  &  &  &  \\
-\end{tabular}\\
-Now both of the classification methods do not perform well. With many different blobs of data, neither method is able to classify well. LDA still performs better than k-NN, which is against what I would have guessed. Since there are different clumps of data, with certain covariances around certain means, I would have guessed that nearest neighbours would have been able to be quite accurate within those clumps, but this appears to not be the case. 
+\subsubsection{Linear SVM Classifier}
+Three hyperparameters were cross-validated for linear SVM: tolerance, maximum iterations, and C (the penalty parameter of the error term). The tolerance for stopping and the penalty are important parameters to validate. The reason for validating the maximum iterations is to reduce overfitting. Without reducing the maximum iterations, the system almost always had near 100\% training accuracy, but low testing accuracy. The ranges of the parameters was as follows:
+\begin{itemize}
+\item tolerance: 1E-6 to 1E-4
+\item C: 1E-1 to 1
+\item maximum iterations: {1, 2, 5, 10}
+\end{itemize}
+Note that this range was found somewhat empirically, by adjusting the values and looking for changes. The highest validation F1 measure was 48.50\% and occurred when tolerance = 9E-5, maximum iterations = 2, and C = 0.5. This corresponded to a training F1 measure of 69.59\% and a testing F1 measure of 43.55\%. 
 
+\subsection{Frequency Bag of Words}
+The converted dataset for frequency bag of words is included in the submitted files.
 
-\subsection*{6. Final comments}
-With the first dataset, which was created using a single gaussian, LDA classification was very effective. K-NN was not effective in this case. With the second dataset, both classifiers had about the same accuracy, which was very poor (~56\%). As well, the precision of each classifier was about the same. However, one thing that is interesting is that the recall of the k-NN classifier was much lower than that of LDA, and thus LDA had a higher F-measure.
+\subsubsection{Gaussian Naive Bayes Classifier}
+Since the frequency dataset is not binary, we switch to a Gaussian Naive Bayes classifier. There were no hyperparameters to tune for this classifier. The training F1 measure was 80.26\%, the validation F1 measure was 36.80\%, and the testing F1 measure was 31.00\%. 
 
+\subsubsection{Decision Tree Classifier}
+The same range of maximum depth was used as for binary bag of words. The best maximum depth was found to be 1, with a validation F1 measure of 38.50\%. This corresponded to a training F1 measure of 39.64\% and a testing F1 measure of 38.50\%.
+
+\subsubsection{Linear SVM Classifier}
+Again, the same range of hyperparameters was used. The best F1 measure was 46.10\%, and occurred when tolerance = 1E-5, maximum iterations = 10, and C = 5. This corresponded to a training F1 measure of 60.84\% and a testing F1 measure of 49.55\%.
+
+\section{IMDB Dataset}
+\subsection{Common Classifier: Random Classifier}
+The random classifier for IMDB had a 50.48\% training F1 measure and a 49.59\% testing F1 measure.
+
+\subsection{Binary Bag of words}
+
+\subsubsection{Bernoulli Naive Bayes Classifier}
+See Figure 2 for the change in performance versus alpha. The peak is clear, and one can see that, again, past a certain value, the performance steadily decreases. The highest validation F1 measure of 84.26\% occurred when alpha = 0.06. This led to a training F1 measure of 87.01\% and a testing F1 measure of 82.98\%.
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{IMDB_BernoulliNB}
+\caption{F1 measure versus alpha for Bernoulli NB (IMDB)}
+\end{figure}
+
+\subsubsection{Decision Tree Classifier}
+The best maximum depth was found to be 20, with a validation F1 measure of 71.85\%. This corresponded to a training F1 measure of 87.55\% and a testing F1 measure of 72.40\%.
+
+\subsubsection{Linear SVM Classifier}
+The best F1 measure was 86.28\%, and occurred when tolerance = 1E-6, maximum iterations = 10, and C = 0.1. This corresponded to a training F1 measure of 98.96\% and a testing F1 measure of 84.86\%.
+
+\subsection{Frequency Bag of Words}
+\subsubsection{Gaussian Naive Bayes Classifier}
+The training F1 measure was 86.11\%, the validation F1 measure was 76.63\%, and the testing F1 measure was 68.76\%. 
+
+\subsubsection{Decision Tree Classifier}
+The best maximum depth was found to be 10, with a validation F1 measure of 68.79\%. This corresponded to a training F1 measure of 75.56\% and a testing F1 measure of 71.08\%.
+
+\subsubsection{Linear SVM Classifier}
+The best F1 measure was 86.28\%, and occurred when tolerance = 1E-6, maximum iterations = 10, and C = 9. This corresponded to a training F1 measure of 98.46\% and a testing F1 measure of 83.48\%.
+
+\section{Discussion}
+For the Yelp Dataset with the Binary Bag of Words representation, The best performance (44.25\%) was the Bernoulli Naive Bayes. However, it was not far off from linear SVM (43.55\%). After switching to the Frequency Bag of Words representation, a more significant difference was noticed. There, Linear SVM performed the best by a significant margin (49.55\%). It's interesting to note that the decision tree classifier and Gaussian Naive Bayes performed worse than their binary bag of words counterparts. Overall, it seems like the frequency bag of words representation, paired with a cross-validated linear SVM is the best choice for the Yelp dataset.\\
+
+This is not quite the case with the IMDB dataset. Here, we notice the same trends of the frequency bag of words representation classifiers performing worse for naive bayes and decision trees, but we also notice that it performs worse for the linear SVM, too. However, the decrease in F1 measure for the decision tree and SVM is much lower than that for Naive Bayes. The best performing classifier here is Linear SVM with the binary bag of words representation.\\
+
+It is interesting that the best classifier for each dataset is a linear SVM, but with different representations. The reason that the frequency representation may be better for Yelp is because there are fewer words per review, whereas for IMDB the reviews are much longer, and thus binary suffices.\\
+
+It is also interesting that we do not see a reliable improvement when using the frequency bag of words representation. I would have hypothesized that there would be an improvement, since it is just adding information for the classifier. However, it may be that we would need more data to take advantage of this extra information.\\
+
+One further thing I would recommend doing is k-fold cross-validation, where, instead of using the same (and a single) validation set, different validation sets are created and tested. This could lead to a better classifier.
 
 \end{document}
