--- a/Assignment 3/Assignment 3.ipynb
+++ b/Assignment 3/Assignment 3.ipynb
@@ -331,7 +331,7 @@
     "\n",
     "for sentence in yelp_valid['Comment']:\n",
     "    yelp_validation_inputs[0].append(generate_bbow_vector(yelp_words, sentence))\n",
-    "    yelp_validation_inputs[1].append(generate_bbow_vector(yelp_words, sentence))#Get all of the inputs for IMDB, too.\n"
+    "    yelp_validation_inputs[1].append(generate_bbow_vector(yelp_words, sentence))\n"
    ]
   },
   {
@@ -997,6 +997,71 @@
     "#Perform validation on SVM (YELP) FREQ\n",
     "tol, max_iter, c = validate_SVM(imdb_training_inputs[1], imdb_train['Evaluation'], imdb_validation_inputs[1], imdb_valid['Evaluation'])\n",
     "best_imdb_classifiers.append((\"SVM: \", svm.LinearSVC(tol=tol, max_iter=max_iter, C=c)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Trees: (0.75560000000000005, 0.69999999999999996, 0.71079999999999999)\n",
+      "SVM: (0.98460000000000003, 0.85150000000000003, 0.83475999999999995)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#run the classifiers for BBOW (data_index = 0)\n",
+    "run_imdb_classifiers(best_imdb_classifiers, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_modified_file(filename, dataset, words):\n",
+    "    new_sentence = \"\"\n",
+    "    with open(filename, 'w') as the_file:\n",
+    "        for i in range(0, len(dataset['Comment'])):\n",
+    "            sentence = dataset['Comment'][i]\n",
+    "            for word in filter(None, sentence.split(' ')):\n",
+    "                if word in words:\n",
+    "                    new_sentence += str(words.index(word)) + \" \"\n",
+    "            the_file.write(new_sentence + \" \" + str(dataset['Evaluation'][i]) + \"\\n\")\n",
+    "            new_sentence = \"\"\n",
+    "def create_modified_yelp_dataset_files():\n",
+    "    create_modified_file(\"Datasets/Modified/Yelp-train.txt\", yelp_train, yelp_words)\n",
+    "    create_modified_file(\"Datasets/Modified/Yelp-test.txt\", yelp_test, yelp_words)\n",
+    "    create_modified_file(\"Datasets/Modified/Yelp-valid.txt\", yelp_valid, yelp_words)\n",
+    "def create_modified_imdb_dataset_files():\n",
+    "    create_modified_file(\"Datasets/Modified/IMDB-train.txt\", imdb_train, imdb_words)\n",
+    "    create_modified_file(\"Datasets/Modified/IMDB-test.txt\", imdb_test, imdb_words)\n",
+    "    create_modified_file(\"Datasets/Modified/IMDB-valid.txt\", imdb_valid, imdb_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_modified_yelp_dataset_files()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "create_modified_imdb_dataset_files()"
    ]
   },
   {
